--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,14 @@
 version: '3'
 services:
-  restaurant-app:
+  frontend:
     build: ./App
     ports: 
       - "3000:3000"
-    container_name: app
+    container_name: restaurant-app
     restart: always
-    links:
-      - backend
   backend:
     build: ./backend
     ports:
       - "8000:8000"
-    container_name: 
+    container_name: restaurant-backend
+    restart: always
