--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -7,10 +7,11 @@ name = "pypi"
 django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+djangorestframework-gis = "*"
 psycopg2-binary = "*"
 uuid = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.14"
