--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
 services:
   db:
-    image: postgres:latest
-    ports:
-      - "5432:5432"
+    image: postgis/postgis:15-3.3
+    restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: mysecretpassword
     container_name: rest_app_db
     volumes:
       - ./initialize_db.sql:/docker-entrypoint-initdb.d/initialize_db.sql
+      - postgres_data:/var/lib/postgresql/data
       - ./csvs:/csvs
+    ports:
+      - "127.0.0.1:5432:5432"
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ] # The command to check database readiness
       interval: 1s     # Check every 5 seconds
@@ -23,6 +25,9 @@ services:
       - "3000:3000"
     container_name: restaurant-app
     restart: always
+    volumes:
+      - ./App:/app
+      - /app/node_modules
   backend:
     build: ./backend
     depends_on:
@@ -37,3 +42,6 @@ services:
       - "8000:8000"
     container_name: restaurant-backend
     restart: always
+
+volumes:
+  postgres_data:
